--- a/main.tex
+++ b/main.tex
@@ -44,10 +44,14 @@
 \definecolor{red_1}{RGB}{220,57,18}
 \definecolor{green_1}{RGB}{16,150,24}
 
+\definecolor{mix_green_blue}{RGB}{34,126,14}
+
+
 \newcommand{\cred}[1]{{\color{purple}#1}}
 \newcommand{\cgreen}[1]{{\color{hgreen}#1}}
 \newcommand{\cblue}[1]{{\color{blue!80}#1}}
 \newcommand{\cprop}[1]{{\color{orange}#1}}
+
 
 
 
