--- a/preface.tex
+++ b/preface.tex
@@ -19,7 +19,7 @@
 \thispagestyle{empty}
 \vspace*{\stretch{1}}
 \begin{flushright}
-  \textit{Ah la these}
+  \textit{Ah, la thèse.}
 \end{flushright}
 \vspace*{\stretch{7}}
 %
