--- a/symmetryinsat.tex
+++ b/symmetryinsat.tex
@@ -515,12 +515,18 @@ in this example $x_7, x_8, x_9$ such that $x_7$ encode the equality of $x_1$ and
 number of auxiliary variables added to the original formula.
 
 
-\hakan{mettre tableauw nombre de SBP generé}
-\begin{figure}[!htbp]
-	\centering
-	\includegraphics[height=5cm]{example-image-a}
-	\label{}
-\end{figure}
+
+\input{sbp-table}
+
+
+
+%\hakan{mettre tableauw nombre de SBP generé}
+%
+%\begin{figure}[!htbp]
+%	\centering
+%	\includegraphics[height=5cm]{example-image-a}
+%	\label{}
+%\end{figure}
 
 
 
